trabalho do dia 5 de janeiro

--- a/dcm.html
+++ b/dcm.html
@@ -11,16 +11,20 @@
 
     <h1>Maravilha das ilhas dos Bijagos Guiné-Bissau</h1>
 
+    <h2>As Ilhas têm muito a oferecer aos seus visitantes</h2>
+
     <div>
-         <img src="guinea-bissau154.jpg">
+         <img src="1024.jfif">
 
-         <img src="Nov20.jpg">
+         <img src="GB_bijagos.jpg">
 
-         <img src="simons_guide_to_gambling_in_guinea_bissau-e1455795152401.jpg">
 
 
     </div>
 
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/ubvgrhfFLSo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    
+    <p>Obrigado por visitares a nossa página!</p>
 
     
 </body>
