aula de 8 de janeiro madificaçao do fundo do texto

--- a/dcm.html
+++ b/dcm.html
@@ -9,9 +9,11 @@
 </head>
 <body>
 
-    <h1>Maravilha das ilhas dos Bijagos Guiné-Bissau</h1>
+    <h1 style="background-color: black;"> Maravilha das ilhas dos Bijagos Guiné-Bissau</h1>
 
-    <h2>As Ilhas têm muito a oferecer aos seus visitantes</h2>
+    
+
+    <h2 style="background-color: black;"> As Ilhas têm muito a oferecer aos seus visitantes</h2>
 
     <div>
          <img src="1024.jfif">
