--- a/dcm.html
+++ b/dcm.html
@@ -18,11 +18,14 @@
     <div>
          <img src="1024.jfif">
 
+         
          <img src="GB_bijagos.jpg">
 
 
 
     </div>
+
+    <p>Aqui esta um pequeno video sobre bijagos</p>
 
     <iframe width="560" height="315" src="https://www.youtube.com/embed/ubvgrhfFLSo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     
